src/widgets/Poker/styles.module.scss
.poker_table_wrap {
  width: 100%;
  height: 100%;
  position: relative;
}

.poker_table_background {
  width: 100%;
  height: 100%;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  z-index: -1;
  .poker_table_background_img {
    width: 100%;
    object-fit: cover;
    height: 100%;
  }
}

.poker_table {
  height: 100%;
}

.poker_table_cards_list {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: calc(100% - 40px);
  width: calc(100% - 40px);
  gap: 25px;
  padding: 20px;
}

.empty_card {
  background: rgba(15, 15, 15, 0.4);
  border-radius: 10px;
  height: auto;
}

.poker_table_cards_list_item {
  width: 100%;
  max-width: 200px;
  img {
    width: 100%;
    height: auto;
  }
}

.poker_table_cards_list_item {
  position: relative;
  height: 18vw;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.poker_table_cards_list_item.flipped .poker_table_card_back {
  transform: rotateY(0deg);
}

.poker_table_cards_list_item.flipped .poker_table_card_front {
  transform: rotateY(180deg);
}

.poker_table_card_back {
  transform: rotateY(180deg);
}

.poker_table_card_front,
.poker_table_card_back {
  display: flex;
  justify-content: center;
  align-items: center;
  transition: all 1s;
  position: absolute;
  width: 100%;
  left: 0;
  top: 0;
  backface-visibility: hidden;
  height: 100%;
  img {
    height: auto;
    width: 100%;
  }
}

@media screen and (min-width: 1900px) {
  .poker_table_cards_list_item {
    max-width: 250px;
    max-height: 450px;
  }
  .poker_table_cards_list {
    justify-content: space-evenly;
  }
}

@media screen and (max-width: 700px) {
  .poker_table_cards_list {
    //gap: 15px;
  }
}

@media screen and (max-width: 650px) {
  .poker_table_background_img {
    height: 100%;
  }
  .poker_table_cards_list {
    //gap: 10px;
    padding: 10px;
    width: calc(100% - 20px);
    height: calc(100% - 20px);
    gap: 5px;
  }
  .poker_table_cards_list_item {
    min-width: 50px;
    min-height: 70px;
  }
  .poker_table_cards_list {
    padding: 5px;
    width: calc(100% - 10px);
  }
}

